# technova-voice-bot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  offer-kit.yaml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.claude/: CLAUDE.md
.github/workflows/: ci.yml
adapters/vertical/: home-services.yaml  legal-intake.yaml
app/: audio_pipeline.py  circuit_breaker.py  config.py  cost_tracker.py  database.py  llm_orchestrator.py  main.py  metrics.py  mock_clients.py  routes_rest.py  routes_websocket.py  session_manager.py  stt_client.py  tools.py  tts_client.py  ws_manager.py
app/utils/: logging_config.py
docs/: PRODUCTIZATION_CONTINUATION_CHECKLIST.md
docs/specs/: 2026-03-19-feature-technova-voice-bot-production-sprint-spec.md  2026-03-19-research-technova-voice-bot-production-sprint.md
static/: app.js  index.html  manifest.json
tests/: conftest.py  test_audio_pipeline.py  test_barge_in.py  test_circuit_breaker.py  test_config.py  test_cost_tracker.py  test_database.py  test_e2e_demo.py  test_llm_orchestrator.py  test_metrics.py  test_mock_clients.py  test_routes.py  test_session_manager.py  test_stt_client.py  test_tools.py  test_tts_client.py  test_ws_manager.py  test_ws_manager_extended.py
